--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,10 @@
         "ranges": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "ctime": "cpp",
+        "map": "cpp",
+        "chrono": "cpp",
+        "ratio": "cpp"
     }
 }
